--- a/src/index.html
+++ b/src/index.html
@@ -9,8 +9,10 @@
   <script crossorigin="anonymous"
     src="https://cdn.jsdelivr.net/npm/tinode-sdk/umd/tinode.prod.js">
   </script>
+  <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 </head>
-<body>
+<body class="mat-typography">
   <app-root></app-root>
 </body>
 </html>
